05/07/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused NullPointerExceptions when renaming Processing
      Instruction nodes.
    * Updated Messages to allow you to specify a directory to load from.
    * Updated the build script to handle the messages file.

05/06/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in CompletionInfo that caused NullPointerExceptions to be
      thrown.
    * Removed the hasSchema() method from XMLDocument because it was dumb
    * Fixed a bug in AdapterNode.getAttributeAt(); Added the
      getAttributeNameAt() method.
    * Fixed several namespace bugs in the getters and setters for attributes in
      AdapterNode

05/01/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in XMLDocument with the hasCompletionInfo method.
      Renamed it to hasSchema().
    * Added the EnhancedMenu class that handles wrapping of the menu for you.

04/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in XMLDocument that caused null pointer exceptions to be
      thrown when setting the format XML option and the validation option
      in the options at the same time.
    * Added support for adding entity reference nodes to the document.

04/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * getAllowedElements() in AdapterNode.java now sorts the elements
    * Updated the OptionsPanel interface to remove the redundant saveOptions()
      method
    * Added node types to AdapterNode

04/27/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added Trish to the About Dialog.
    * jsXe no longer thinks the document is not well formed if the DTD/Schema
      cannot be found. It is treated as a validation error.

04/26/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Moved entityDeclared() from AdapterNode to XMLDocument
    * Cleaned up and Documented some methods
    * AdapterNode will now let you add entity nodes if the document is not
      being validated.
    * Updated Copyright info